styles/globals.css
@import "tailwindcss";

@config "../tailwind.config.js";

/* Ensure Swiper surfaces remain transparent */
.swiper,
.swiper-slide {
  background: transparent !important;
}

/* Remove any inner paddings added by skins */
.swiper {
  padding: 0 !important;
}
.swiper-slide {
  padding: 0 !important;
}

.swiper-button-prev,
.swiper-button-next {
  display: none !important;
}

.customer-feedback .swiper-pagination {
  position: static;
  margin-top: 0px;
}
.customer-feedback .swiper-pagination-bullet {
  width: 8px;
  height: 8px;
  background-color: #6b7280;
  opacity: 1;
  margin: 0 6px !important;
}
.customer-feedback .swiper-pagination-bullet-active {
  background-color: #7124a8;
  width: 12px;
  border-radius: 12px;
  transition: all;
}

.banner .swiper-pagination-bullet {
  width: 8px;
  height: 8px;
  background-color: #6b7280;
  opacity: 1;
  margin: 0 6px !important;
}
.banner .swiper-pagination-bullet-active {
  background-color: #7124a8;
  width: 12px;
  border-radius: 12px;
  transition: all;
}

